# sint

./: .gitignore
cmake/: FindIMGUI.cmake  FindSTEAMAPI.cmake
source/: CMakeLists.txt  CMakePresets.json  Compent.cpp  Entity.cpp  Entity.hpp  compile_commands.json  main.cpp  vcpkg.json
source/.cache/clangd/index/: main.cpp.8D9FDF83FB829E4D.idx
source/application/: Application.hpp  ApplicationSDL.cpp  CMakeLists.txt
source/base/: CMakeLists.txt  Enum.hpp  IO.cpp  IO.hpp  List.hpp  Logger.cpp  Logger.hpp  Set.hpp  String.hpp  Thread.cpp  Thread.hpp  Time.cpp  Time.hpp  unique_vector.hpp
source/client/: SDLMain.cpp
source/mono/: CMakeLists.txt  platform.cpp  platform.hpp
source/test/: CMakeLists.txt  main.cpp  mainC.cpp  windowTest.cpp
triplets/: x64-linux-mixed.cmake
